# conippets

./: README.md  pyproject.toml
conippets/: config.py  datetime.py  logger.py
examples/: config.py  logger.py
